feat:  Actualizacion de la interfaz del repositorio de Cliente y configurar la base de datos. Se añadieron instrucciones del proyecto